# GPS-Tracking-Server

./: .env  .env.example  .gitignore  CELL_LOCATION_SETUP.md  DEVICE_CONTROL_IMPLEMENTATION.md  FIRMWARE_INTEGRATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_STATUS.md  MISSING_SERVER_FEATURES.md  QUICK_START.md  README.md  SETUP_AND_TEST.md  SUPL_IMPLEMENTATION.md  add_device_67.py  agnss_dump.py  device-access-issue.md  docker-compose.yml  gpstracking-ca.der  gpstracking-ca.hex  last_test_output.txt  last_test_output_nocap.txt  monitor-gps-data.ps1  package-lock.json  payload.json  pgps_dump.py  restart_localtunnel.ps1  restart_server_and_tunnel.ps1  restart_tunnel.ps1  start-docker.bat  start-server-tunnel.bat  start-server-tunnel.sh  test-cell-location-australia.ps1  test-cell-location.ps1  test_agnss.ps1  test_agnss_comprehensive.ps1  test_all_features.ps1  test_breach_simple.py  test_cell_location.json  test_full_integration.js  test_geofence_alerts.js  (+14 more)
api/: .env  API_DOCUMENTATION.md  Dockerfile  main.py  nrfcloud_location.py  pyproject.toml  requirements-dev.txt  requirements.txt  websocket_manager.py
api/agnss/: __init__.py  cache_store.py  supl_client.py
api/db/: database.py  devices.py  geofence_breaches.py  geofences.py  gps_data.py  models.py  users.py
api/endpoints/: agnss_endpoints.py  app_user_endpoints.py  authorisation.py  cell_location.py  debug_endpoints.py  device_data_endpoint.py  device_data_endpoints.py  realtime_endpoints.py
api/notifications/: geofence_breach_notifications.py  service.py  sms_notifications.py
api/services/: __init__.py  agnss_fetch.py  (+7 more)
(+60 files in other folders)
